--- a/Activity1/index.html
+++ b/Activity1/index.html
@@ -19,7 +19,7 @@
 <div class="collapsible">
 	<!--One-->
 <div class="card" style="width: 30rem;">
-  <img class="image-bottom" src="https://i.picsum.photos/id/190/550/250.jpg" alt="Card example image">
+  <img class="image-bottom" src="https://i.picsum.photos/id/190/550/250.jpg" >
     <div class="card-body">
     <h4 class="card-title">One</h4>
     <h5 class="card-subtitle">Tao Te Ching by Lao-Tzu.</h5>
@@ -54,7 +54,7 @@
 </div>
 <!--Two-->
 <div class="card" style="width: 30rem;">
-  <img class="image-bottom" src="https://i.picsum.photos/id/306/550/250.jpg" alt="Card example image">
+  <img class="image-bottom" src="https://i.picsum.photos/id/306/550/250.jpg" >
     <div class="card-body">
     <h4 class="card-title">Two</h4>
     <h5 class="card-subtitle">Tao Te Ching by Lao-Tzu.</h5>
@@ -93,7 +93,7 @@
 </div>
 <!--Three-->
 <div class="card" style="width: 30rem;">
-  <img class="image-bottom" src="https://i.picsum.photos/id/1042/550/250.jpg" alt="Card example image">
+  <img class="image-bottom" src="https://i.picsum.photos/id/1042/550/250.jpg" >
     <div class="card-body">
     <h4 class="card-title">Three</h4>
     <h5 class="card-subtitle">Tao Te Ching by Lao-Tzu.</h5>
