--- a/Activity3/paperSite.html
+++ b/Activity3/paperSite.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Literature</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+        <meta charset="UTF-8" />
         <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.1/dist/paper.css">
         <link rel="stylesheet" href="https://unpkg.com/papercss@1.6.1/dist/paper.min.css">
         <link rel="stylesheet" href="paperStyle.css">
