removed the searchBAR id

--- a/Activity3/paperSite.html
+++ b/Activity3/paperSite.html
@@ -35,7 +35,7 @@
             </nav>
         </div>
           <!--form-->
-        <form id="searchBAR" action="https://b-ok.asia/s/">
+        <form action="https://b-ok.asia/s/">
             <div class="col sm-8">
                 <div class="form-group">
                     <label for="paperInputs3">Search for books</label>
