--- a/Activity3/paperSite_article.html
+++ b/Activity3/paperSite_article.html
@@ -35,7 +35,7 @@
           </nav>
         </div>
           <!--form-->
-        <form id="searchBAR" action="https://booksc.xyz/s/">
+        <form action="https://booksc.xyz/s/">
           <div class="col sm-8">
             <div class="form-group">
               <label for="paperInputs3">Search for articles</label>
