Download Tab, continue

--- a/exam/index.html
+++ b/exam/index.html
@@ -27,7 +27,7 @@
                     <p class="lead">Ang webpage na ito ay ginawa upang turuan ang isang baguhan kung pa-paano mag hanap, mag install, at mag maintain ng isang Gnu/linux operating system. Ang mga steps ay nakasulat sa filipino, mayroong din itong mga litrato upang mas madaling maintindahn ng kahit na sino.</p>
                     <hr class="my-4">
                     <p>
-                        <b>Mga requirements:</b>
+                        <b>Requirements:</b>
                         <ul>
                             <li>Flashdrive na may kapasidad na hindi bababa sa 4GB.</li>
                             <li>Internet Connection.</li>
@@ -41,7 +41,7 @@
                     </p>
                 </div>
             </div>
-
+<!--#########################################################################################################################################################-->
             <!--download-->
             <div class="tab-pane fade" id="nav-download" role="tabpanel" aria-labelledby="nav-download-tab">
                 <div class="accordion pad" id="accordionHead">
@@ -56,15 +56,16 @@
                         </div>
                         <div id="card-find" class="collapse" aria-labelledby="header-card-find" data-parent="#accordionHead">
                             <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
+                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
+                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
+                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonFind">View Image/s</button>
                             </div>
-                            <img src="./images/1.png" class="img-size" alt="...">
-                        </div>
+                    </div>
                     </div>
                     <!--card-download-->
-                    <div class="card">
-                        <div class="card-header" id="header-card-download">
-                            <h2 class="mb-0">
+                    <div class="card"> <div class="card-header" id="header-card-download"> <h2 class="mb-0">
                                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-download" aria-expanded="false" aria-controls="card-download">
                                     Download Distribution
                                 </button>
@@ -72,7 +73,13 @@
                         </div>
                         <div id="card-download" class="collapse" aria-labelledby="header-card-download" data-parent="#accordionHead">
                             <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                Para sa tutorial na ito, ang aking gagamitin na distribution ay Fedora. Ang dahilan kung bakit ko napili ang distro na ito ay dahil Fedora ang pinaka angkop sa ginagawa ko.
+                                Ang mga software sa Fedora ay laging updated, ang mga firmware at iba pang mga kritikal na update ay palaging bago at maraming maintainer kaya naman ito ang aking paboritong distro.
+                                Ngunit di-gaya ng ibang distro gaya ng Ubuntu, ang Fedora ay may pag-kakumplekado ng kaunti. May mga bagay na kailangan mo gawin ng manual, at hindi automatic gaya ng Ubuntu.<br><br>
+                                Ang unang kailangan na gawin ay pumunta sa official website ng <a href="https://getfedora.org">Fedora</a>, i-click ang download now para sa Fedora Workstation.
+                                at i-click at i-install ang Fedora Media Writer. Ang Fedora Media Writer ay isang bootable drive maker na ginawa para maka-pili ng <a href="https://spins.fedoraproject.org">spin</a>, ma-download, at ma-write sa iyong flashdrive,
+                                I-install mo ito dahil ito ang pangunahing software na kailangan natin upang makagawa ng bootable drive.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonDownload">View Image/s</button>
                             </div>
                         </div>
                     </div>
@@ -87,19 +94,76 @@
                         </div>
                         <div id="card-burn" class="collapse" aria-labelledby="header-card-burn" data-parent="#accordionHead">
                             <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                I-open ang Fedora Media Writer na iyong dinownload. At makikita mo ang unang interface nito, mayroong tatlong pwedeng pagpilian. Ang Fedora Workstation, Fedora Server, at Custom Image.
+                                Para sa tutorial na ito ang gagamitin natin ay fedora Workstation. I-click ito at mapupunta ka sa Fedora Workstation interface kung saan ay mayroon ka makikitang button na Create Live USB,
+                                i-click mo ito. <br><br>Ngayon naman ay nasa interface ka na nag ddownload ng image ng Fedora, kailangan mo lang lagyan ng check ang check box na Write the image immediately when the download is finished.
+                                Hintayin lamang, ang Fedora Media Writer ay automatic na I-dodownload ang pinaka latest na release ng Fedora, at I-wwrite na rin ito ng automatic sa iyong flashdrive na nakasaksak sa computer.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonBurn">View Image/s</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+<!--#########################################################################################################################################################-->
             <!--install-->
             <div class="tab-pane fade" id="nav-install" role="tabpanel" aria-labelledby="nav-install-tab">Reymundo</div>
+
+<!--#########################################################################################################################################################-->
             <!--maintain-->
             <div class="tab-pane fade" id="nav-maintain" role="tabpanel" aria-labelledby="nav-maintain-tab">Santiago</div>
+<!--#########################################################################################################################################################-->
+        </div>
+        <!--Modals-->
+        <!--find-modal-->
+        <div class="modal fade" id="buttonFind" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img class="img-size" src="./images/1.png" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <!--download-modal-->
+        <div class="modal fade" id="buttonDownload" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img class="img-size" src="./images/2.png" />
+                        <img class="img-size" src="./images/3.png" />
+                        <img class="img-size" src="./images/4.png" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--burn-modal-->
+        <div class="modal fade" id="buttonBurn" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img class="img-size" src="./images/5.png" />
+                        <img class="img-size" src="./images/6.png" />
+                        <img class="img-size" src="./images/7.png" />
+                        <img class="img-size" src="./images/8.png" />
+                        <img class="img-size" src="./images/9.png" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<!--#########################################################################################################################################################-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </body>
