--- a/exam/index.html
+++ b/exam/index.html
@@ -24,7 +24,7 @@
             <div class="tab-pane fade show active" id="nav-welcome" role="tabpanel" aria-labelledby="nav-welcome-tab">
                 <div class="jumbotron" id="color">
                     <h1 class="display-4">Welcome to Gnu/Linux Installation Tutorial</h1>
-                    <p class="lead">Ang webpage na ito ay ginawa upang turuan ang isang baguhan kung pa-paano mag hanap, mag install, at mag maintain ng isang Gnu/linux operating system. Ang mga steps ay nakasulat sa filipino, mayroong din itong mga litrato upang mas madaling maintindahn ng kahit na sino.</p>
+                    <p class="lead">Ang webpage na ito ay ginawa upang turuan ang isang baguhan kung pa-paano mag hanap, mag install, at mag maintain ng isang Gnu/linux operating system. Ang mga steps ay nakasulat sa filipino, mayroong din itong mga litrato, at video upang mas madaling maintindahn ng kahit na sino.</p>
                     <hr class="my-4">
                     <p>
                         <b>Requirements:</b>
@@ -106,11 +106,11 @@
             </div>
 <!--#########################################################################################################################################################-->
             <!--install-->
-            <div class="tab-pane fade" id="nav-install" role="tabpanel" aria-labelledby="nav-install-tab">Reymundo</div>
+            <div class="tab-pane fade" id="nav-install" role="tabpanel" aria-labelledby="nav-install-tab">TODO</div>
 
 <!--#########################################################################################################################################################-->
             <!--maintain-->
-            <div class="tab-pane fade" id="nav-maintain" role="tabpanel" aria-labelledby="nav-maintain-tab">Santiago</div>
+            <div class="tab-pane fade" id="nav-maintain" role="tabpanel" aria-labelledby="nav-maintain-tab">TODO</div>
 <!--#########################################################################################################################################################-->
         </div>
         <!--Modals-->
